# slog

./: CMakeLists.txt  Makefile  README.md  log_test.cc
include/: slogger.hpp
sample/: log_test.cc
test/: CMakeLists.txt  test_initialization.cc  test_slogger.cc
